code/networking/example-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  containers:
    - image: docker.io/deutschmann/example-app
      name: example-app
      ports:
        - containerPort: 5000
          name: http
          protocol: TCP
