code/networking/example-app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example-app-service
spec:
  selector:
    app: example-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
