code/networking/example-app-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-example-app
spec:
  podSelector:
    matchLabels:
      app: example-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
